--- a/templates/admin.html
+++ b/templates/admin.html
@@ -103,7 +103,7 @@ html, body {
     font-weight: 1000;
     font-family: 'Playfair Display', serif;
     text-align: center;
-    background: linear-gradient(to right, #ffd1a4, #ffd1a4);
+    background: linear-gradient(to right, #80e9ef, #ffd1a4);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -208,8 +208,7 @@ html, body {
         <div class="name">SPORTURE</div>
     </div>
     <nav class="nav-links">
-        <a href="#slide-hero">Home</a>
-        <a href="#slide-contact">Contact Me</a>
+        <a href="/">Home</a>
         <button class="logout-btn" onclick="logout()">Logout</button>
     </nav>
 </div>
@@ -240,7 +239,7 @@ html, body {
 
 <script>
 function logout() {
-    window.location.href = "/login_page";
+    window.location.href = "/";
 }
 
 // Show title above when hover
