--- a/templates/application.html
+++ b/templates/application.html
@@ -160,7 +160,7 @@
       <div class="name">SPORTURE</div>
     </div>
     <nav class="nav-links">
-      <a href="#slide-contact">Back</a>
+      <a href="/dashboard">Back</a>
       <button class="logout-btn" onclick="logout()">Logout</button>
     </nav>
   </div>
